--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,31 @@
-Package: dml
+Package: crossfit
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Double/Debiased Machine Learning
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Thomas Covert, Yixin Sun, and Richard Sweeney
+Maintenance: ysun9@chicagobooth.edu
+Description: An implementation of double/debiased machine learning method 
+        (Chernozhukov et al.2018)to remove regularization bias and 
+        overfitting in estimating parameters of interest.This method has two 
+        critical contributions: 
+        1. The use of cross-fitting to efficiently split the sample. 
+        2. Identifying parameters using Neyman-orthogonal moments, which are 
+        less sensitive to errors in estimating nuisance parameters. 
+        Here, we introduce select machine learning techniques that 
+        can be applied for causal inference in this framework.
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1.9000
+Imports: 
+    magrittr,
+    tibble,
+    purrr,
+    stats,
+    furrr,
+    future,
+    dplyr,
+    stringr,
+    Formula,
+    modelr,
+    grf
