revising future_options import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,select)
 importFrom(furrr,future_map)
-importFrom(future,future.options)
+importFrom(furrr,future_options)
 importFrom(future,multiprocess)
 importFrom(future,plan)
 importFrom(grf,regression_forest)
