getting rid of rfseed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,18 @@
 export(dml)
 export(dml_fast)
 export(predict_rf2)
+export(psi_plpr)
+export(psi_plpr_grad)
+export(psi_plpr_op)
+export(psi_plpr_with_grad)
+export(psi_plr)
+export(psi_plr_grad)
+export(psi_plr_op)
 export(regression_forest2)
 importFrom(Formula,Formula)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
+importFrom(dplyr,if_else)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,select)
 importFrom(furrr,future_map)
