--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(grf,regression_forest)
 importFrom(magrittr,"%>%")
 importFrom(modelr,crossv_kfold)
 importFrom(purrr,map)
+importFrom(purrr,map_dbl)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
