fixing error in passing additional variables to future_map function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(furrr,future_map)
 importFrom(furrr,future_options)
 importFrom(future,multiprocess)
 importFrom(future,plan)
+importFrom(glmnetUtils,cv.glmnet)
 importFrom(grf,regression_forest)
 importFrom(magrittr,"%>%")
 importFrom(modelr,crossv_kfold)
