implement lasso option and fix seed specification

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,7 @@ S3method(print,dml)
 S3method(print,summary.dml)
 S3method(summary,dml)
 S3method(vcov,dml)
-export("https://stackoverflow.com/questions/23922130/default-argument-in-r-function-formal-argument-matched-by-multiple-actual-argum?rq=1")
-export("in")
-export(arguments)
 export(dml)
-export(note)
-export(on)
-export(passing)
 export(predict_rf2)
 export(psi_plpr)
 export(psi_plpr_grad)
@@ -22,6 +16,7 @@ export(psi_plpr_with_grad)
 export(psi_plr)
 export(psi_plr_grad)
 export(psi_plr_op)
+export(regression_forest2)
 export(run_ml)
 importFrom(Formula,Formula)
 importFrom(broom,glance)
