fix error in using training data instead of test data to compute delta and gamma models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ S3method(print,summary.dml)
 S3method(summary,dml)
 S3method(vcov,dml)
 export(dml)
-export(predict_rf2)
+export(predict_rlasso2)
 export(psi_plpr)
 export(psi_plpr_grad)
 export(psi_plpr_op)
@@ -31,6 +31,7 @@ importFrom(future,multiprocess)
 importFrom(future,plan)
 importFrom(glmnetUtils,cv.glmnet)
 importFrom(grf,regression_forest)
+importFrom(hdm,rlasso)
 importFrom(magrittr,"%>%")
 importFrom(modelr,crossv_kfold)
 importFrom(purrr,map)
