create get.params function to figure out why ... parameters are not being passed to future_map

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(hdm,rlasso)
 importFrom(magrittr,"%>%")
 importFrom(modelr,crossv_kfold)
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(purrr,map_dbl)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap)
