really sparse version of new dml function is up and running

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,8 @@ S3method(print,summary.dml)
 S3method(summary,dml)
 S3method(vcov,dml)
 export(dml)
+export(dml_original)
 export(predict_rlasso2)
-export(psi_plpr)
-export(psi_plpr_grad)
-export(psi_plpr_op)
-export(psi_plpr_with_grad)
 export(psi_plr)
 export(psi_plr_grad)
 export(psi_plr_op)
@@ -21,9 +18,12 @@ export(rlasso2)
 export(run_ml)
 importFrom(Formula,Formula)
 importFrom(broom,glance)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,if_else)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,select)
 importFrom(furrr,future_map)
@@ -52,6 +52,7 @@ importFrom(stats,predict)
 importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(stringr,regex)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_replace_all)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
