--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(rlasso2)
 export(run_ml)
 importFrom(Formula,Formula)
 importFrom(broom,glance)
+importFrom(broom,tidy)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
@@ -37,6 +38,7 @@ importFrom(magrittr,"%>%")
 importFrom(modelr,crossv_kfold)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map2_dfr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap)
