#7 first pass at trying to fix gradient bug

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,10 @@ S3method(summary,dml)
 S3method(vcov,dml)
 export(dml)
 export(dml_original)
+export(dml_step_original)
 export(predict_rlasso2)
 export(psi_plr)
 export(psi_plr_grad)
-export(psi_plr_op)
 export(regression_forest2)
 export(rlasso2)
 export(run_ml)
@@ -40,6 +40,7 @@ importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_dfr)
 importFrom(purrr,map_dbl)
+importFrom(purrr,map_dfc)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
