#7 implemented linear lasso using non-concentrating out approach - now onto poisson

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dml_step_original)
 export(predict_rlasso2)
 export(psi_plr)
 export(psi_plr_grad)
+export(psi_plr_op)
 export(regression_forest2)
 export(rlasso2)
 export(run_ml)
