#7 finish implementing linear and poisson dml_original using cv.glmnet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,9 @@ export(dml)
 export(dml_original)
 export(dml_step_original)
 export(predict_rlasso2)
+export(psi_plpr)
+export(psi_plpr_grad)
+export(psi_plpr_op)
 export(psi_plr)
 export(psi_plr_grad)
 export(psi_plr_op)
