--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,18 +8,16 @@ S3method(print,summary.dml)
 S3method(summary,dml)
 S3method(vcov,dml)
 export(dml)
-export(dml_original)
-export(dml_step_original)
-export(predict_rlasso2)
+export(dml_step)
 export(psi_plpr)
 export(psi_plpr_grad)
 export(psi_plpr_op)
 export(psi_plr)
+export(psi_plr_conc)
 export(psi_plr_grad)
+export(psi_plr_grad_conc)
 export(psi_plr_op)
-export(regression_forest2)
-export(rlasso2)
-export(run_ml)
+export(psi_plr_op_conc)
 importFrom(Formula,Formula)
 importFrom(broom,glance)
 importFrom(broom,tidy)
