#7 document all functions for different dml methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,12 @@ S3method(vcov,dml)
 export(dml)
 export(dml_step)
 export(psi_plpr)
+export(psi_plpr_conc)
 export(psi_plpr_grad)
+export(psi_plpr_grad_conc)
 export(psi_plpr_op)
+export(psi_plpr_op_conc)
+export(psi_plpr_with_grad)
 export(psi_plr)
 export(psi_plr_conc)
 export(psi_plr_grad)
