--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ importFrom(furrr,future_map)
 importFrom(furrr,future_options)
 importFrom(future,multiprocess)
 importFrom(future,plan)
-importFrom(glmnetUtils,cv.glmnet)
+importFrom(glmnet,cv.glmnet)
 importFrom(grf,regression_forest)
 importFrom(hdm,rlasso)
 importFrom(magrittr,"%>%")
