#7 speed up cv.glmnet by doing one big cv.glmnet before dml_fold

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,8 @@ importFrom(furrr,future_options)
 importFrom(future,multiprocess)
 importFrom(future,plan)
 importFrom(glmnet,cv.glmnet)
+importFrom(glmnet,glmnet)
 importFrom(grf,regression_forest)
-importFrom(hdm,rlasso)
 importFrom(magrittr,"%>%")
 importFrom(modelr,crossv_kfold)
 importFrom(purrr,map)
