--- a/notes/dml_lasso-cache.yaml
+++ b/notes/dml_lasso-cache.yaml
@@ -134,9 +134,9 @@ files:
         2.9\miktex\bin\x64;%ProgramFiles(x86)%\MiKTeX 2.9\miktex\bin;$PATH
     type: ParsedYAML
   dml_lasso.tex:
-    timeStamp: 2020-09-02T20:35:28.673Z
+    timeStamp: 2020-09-04T15:35:34.838Z
     jobNames: []
-    hash: hDNvtBA9SgAOfRNCdEvLpQMERE2vTyzID5YjU390SDA=
+    hash: 40Htc62q2X3cV6VQjzCYL1a54b6Qyl+x17Prrm0Y77I=
     type: LaTeX
     subType: article
   'C:\Users\Yixin Sun\AppData\Roaming\dicy\config.yaml':
@@ -425,7 +425,7 @@ files:
       calls: []
     type: ParsedFileListing
   dml_lasso.log-ParsedLaTeXLog:
-    timeStamp: 2020-09-02T20:35:08.335Z
+    timeStamp: 2020-09-04T15:35:38.171Z
     jobNames: []
     value:
       messages:
@@ -2028,8 +2028,8 @@ files:
           source:
             file: dml_lasso.tex
             range:
-              start: 300
-              end: 300
+              start: 301
+              end: 301
           log:
             file: dml_lasso.log
             range:
@@ -2042,8 +2042,8 @@ files:
           source:
             file: dml_lasso.tex
             range:
-              start: 300
-              end: 300
+              start: 301
+              end: 301
           log:
             file: dml_lasso.log
             range:
@@ -2056,8 +2056,8 @@ files:
           source:
             file: dml_lasso.tex
             range:
-              start: 300
-              end: 300
+              start: 301
+              end: 301
           log:
             file: dml_lasso.log
             range:
@@ -2070,26 +2070,40 @@ files:
           source:
             file: dml_lasso.tex
             range:
-              start: 300
-              end: 300
+              start: 301
+              end: 301
           log:
             file: dml_lasso.log
             range:
               start: 620
               end: 620
-        - severity: info
+        - severity: warning
           name: pdfTeX
           category: Package rerunfilecheck
           text: >-
-            File `dml_lasso.out' has not changed. Checksum:
-            26EB4FD55BF072890AFB5E8C745EF266;605.
+            File `dml_lasso.out' has changed. Rerun to get outlines right or use
+            package `bookmark'.
           source:
             file: dml_lasso.tex
           log:
             file: dml_lasso.log
             range:
-              start: 621
-              end: 622
+              start: 622
+              end: 624
+        - severity: info
+          name: pdfTeX
+          category: Package rerunfilecheck
+          text: >-
+            Checksums for `dml_lasso.out': Before:
+            EE272F10A01B8402D0F2E630F9FFB513;1013 After:
+            C8A7272A95B7CEEA8EA238B114A01CD1;967.
+          source:
+            file: dml_lasso.tex
+          log:
+            file: dml_lasso.log
+            range:
+              start: 626
+              end: 628
         - severity: info
           name: pdfTeX
           category: Package atveryend
@@ -2097,36 +2111,36 @@ files:
           source:
             file: dml_lasso.tex
             range:
-              start: 300
-              end: 300
+              start: 301
+              end: 301
           log:
             file: dml_lasso.log
             range:
-              start: 623
-              end: 623
+              start: 629
+              end: 629
       inputs: []
       outputs:
         - dml_lasso.pdf
       calls: []
     type: ParsedLaTeXLog
   dml_lasso.log:
-    timeStamp: 2020-09-02T20:35:30.841Z
+    timeStamp: 2020-09-04T15:35:37.933Z
     jobNames: []
-    hash: sbNmsMvcXo4MuYeuobiOGPoN7OUDk3qAS1xBjb/CMik=
+    hash: 52LVJUZnpHpmkCTF3qvx3i2EgDx6z3yEroa1xYiXT/4=
     type: LaTeXLog
     subType: pdfTeX
   dml_lasso.aux:
-    timeStamp: 2020-09-02T20:35:30.624Z
+    timeStamp: 2020-09-04T15:35:37.751Z
     jobNames: []
-    hash: VeRuUFkRVzoIguAM3TjI4uPxuOI0wgzAYcollaqf7NE=
+    hash: GztnifYEsuGIS8wv5mSAvf4VK68WSuIx2bR1sZbbAY4=
     type: LaTeXAuxilary
   dml_lasso.fls:
-    timeStamp: 2020-09-02T20:35:30.856Z
+    timeStamp: 2020-09-04T15:35:37.955Z
     jobNames: []
-    hash: zDQF07u4hmWZm4n7Yw9eiQuiG6CgxQO/Bvge08xQFHM=
+    hash: uzRJ9qXYGrvJUtg3/RzRcKxDwos/FljNh+UYyI1q2dA=
     type: FileListing
   dml_lasso.aux-ParsedLaTeXAuxilary:
-    timeStamp: 2020-08-28T17:54:24.203Z
+    timeStamp: 2020-09-04T15:34:26.682Z
     jobNames: []
     value:
       commands:
@@ -2148,6 +2162,11 @@ files:
         - gdef
         - providecommand
         - providecommand
+        - '@writefile'
+        - '@writefile'
+        - '@writefile'
+        - '@writefile'
+        - '@writefile'
         - '@writefile'
         - '@writefile'
         - '@writefile'
@@ -2693,9 +2712,9 @@ files:
     timeStamp: 2017-04-10T02:58:41.639Z
     jobNames: []
   dml_lasso.out:
-    timeStamp: 2020-09-02T20:35:30.629Z
+    timeStamp: 2020-09-04T15:35:37.753Z
     jobNames: []
-    hash: P+NLSW+7xh/dhBejL85Z9oGwAa4t680t6VfXlb7I4GA=
+    hash: F13QvugiZn3mz20/UZhd4hF6sGeECDEpdqhchunFrMg=
     type: OUT
   'C:\Program Files\MiKTeX 2.9\fonts\tfm\public\amsfonts\cmextra\cmbsy6.tfm':
     timeStamp: 2009-02-06T20:24:08.000Z
@@ -2725,9 +2744,9 @@ files:
     timeStamp: 2009-07-14T18:37:46.000Z
     jobNames: []
   dml_lasso.toc:
-    timeStamp: 2020-09-02T20:35:30.632Z
+    timeStamp: 2020-09-04T15:35:37.756Z
     jobNames: []
-    hash: qBr+5he2byw+CcQ9GerPaEsmz5VmudpA3nnEE1BDFFs=
+    hash: CFZ7R7ikgLP/imI6Mgt/7kKA9XSsBwbQ4i1w2z//RKk=
     type: TableOfContents
   'C:\Program Files\MiKTeX 2.9\tex\generic\oberdiek\infwarerr.sty':
     timeStamp: 2016-06-09T18:36:18.000Z
@@ -2745,14 +2764,14 @@ files:
     timeStamp: 2009-07-14T18:37:46.000Z
     jobNames: []
   dml_lasso.pdf:
-    timeStamp: 2020-09-02T20:35:30.822Z
+    timeStamp: 2020-09-04T15:35:37.926Z
     jobNames: []
-    hash: gmF44qd2XafRDsFwTC6KIRYEP87lazk0YDdoZWsZi94=
+    hash: 3cyOe1ecQO/czeczcwMb2VvGXA1dRF/IEvELQWomqBo=
     type: PortableDocumentFormat
   dml_lasso.synctex.gz:
-    timeStamp: 2020-09-02T20:35:30.826Z
+    timeStamp: 2020-09-04T15:35:37.927Z
     jobNames: []
-    hash: 5CU4+nBJoXQDnh/D5NgnopfnbbfMgzH4QhAOLl+/bYc=
+    hash: U5yIUv+iiIoqHSRIGnkl3aSFCJC1A1OGKLAh9WXGbLQ=
     type: SyncTeX
 rules:
   - name: ApplyOptions
