Issue7 implement poisson (#9)
* change model.frame

* small changes

* first pass at calculating mu_hat in original dml formulation

* first pass at estimating theta using original dml formulation

* really sparse version of new dml function is up and running

* #7 reformulate how to run machine learning estimates

* Update dml_original.R

* #7 basic writeup of how I thikn we should do Poisson lasso

* #7 more clarification

* #7 in progress thinking through the covariance estimates

* #7 reminder for me about how the covariance calculation works

* #4 Update poisson dml method following stata methodology

* #7 spit out s instead of beta_hat from estimate_weights

* #7 revamp dml_original to linear model with a new dml_fold function that fills in moment conditions within each fold

* #7 first pass at trying to fix gradient bug

* #7 implemented linear lasso using non-concentrating out approach - now onto poisson

* #7 finish implementing linear and poisson dml_original using cv.glmnet

* #7 fix issue with ml = rlasso

* #7 round 1 of implementing random forest using Z'(Y - s - D*theta)

* #7 testing out concentrating out vs finite nuisance parameter approach

* #7 merge dml and dml_original aka finite nuisance parameter approach and concentrating out approach

* #7 add parallelising back in

* #7 add documentation for new arguments

* #7 add warning if poisson is used with rlasso

* #7 merge in dml_concentrate into main dml function

* #7 get rid of poisson lasso in concentrating  out approach

* #7 document all functions for different dml methods

* #7 small change in notes

* #7 get rid of rlasso, finite rf, and formula cv.glmnet

* #7 updated errors in dml note

* #7 small change

* #7 adding ml back into dml_fold

* #7 speed up cv.glmnet by doing one big cv.glmnet before dml_fold

* #7 fixed bug in poisson - drop penalty.factor

* #7 get rid of unnecessary print statement

* #7 add in ellipses

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,36 +8,45 @@ S3method(print,summary.dml)
 S3method(summary,dml)
 S3method(vcov,dml)
 export(dml)
-export(predict_rlasso2)
+export(dml_step)
 export(psi_plpr)
+export(psi_plpr_conc)
 export(psi_plpr_grad)
+export(psi_plpr_grad_conc)
 export(psi_plpr_op)
+export(psi_plpr_op_conc)
 export(psi_plpr_with_grad)
 export(psi_plr)
+export(psi_plr_conc)
 export(psi_plr_grad)
+export(psi_plr_grad_conc)
 export(psi_plr_op)
-export(regression_forest2)
-export(rlasso2)
-export(run_ml)
+export(psi_plr_op_conc)
 importFrom(Formula,Formula)
 importFrom(broom,glance)
+importFrom(broom,tidy)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,if_else)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,select)
 importFrom(furrr,future_map)
 importFrom(furrr,future_options)
 importFrom(future,multiprocess)
 importFrom(future,plan)
-importFrom(glmnetUtils,cv.glmnet)
+importFrom(glmnet,cv.glmnet)
+importFrom(glmnet,glmnet)
 importFrom(grf,regression_forest)
-importFrom(hdm,rlasso)
 importFrom(magrittr,"%>%")
 importFrom(modelr,crossv_kfold)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map2_dfr)
 importFrom(purrr,map_dbl)
+importFrom(purrr,map_dfc)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
@@ -52,6 +61,7 @@ importFrom(stats,predict)
 importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(stringr,regex)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_replace_all)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
