#10 add option for ml = hal

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ S3method(print,summary.dml)
 S3method(summary,dml)
 S3method(vcov,dml)
 export(dml)
-export(dml_step)
 export(psi_plpr)
 export(psi_plpr_conc)
 export(psi_plpr_grad)
@@ -40,6 +39,9 @@ importFrom(future,plan)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,glmnet)
 importFrom(grf,regression_forest)
+importFrom(hal9001,enumerate_basis)
+importFrom(hal9001,make_copy_map)
+importFrom(hal9001,make_design_matrix)
 importFrom(magrittr,"%>%")
 importFrom(modelr,crossv_kfold)
 importFrom(purrr,map)
