--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(purrr,map2)
 importFrom(purrr,map2_dfr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfc)
+importFrom(purrr,map_lgl)
 importFrom(purrr,pluck)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
