update furrr functions to get rid of warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,8 +32,8 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,select)
+importFrom(furrr,furrr_options)
 importFrom(furrr,future_map)
-importFrom(furrr,future_options)
 importFrom(future,multiprocess)
 importFrom(future,plan)
 importFrom(glmnet,cv.glmnet)
