add tidy function for producing latex output with modelsummary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(glance,dml)
 S3method(print,dml)
 S3method(print,summary.dml)
 S3method(summary,dml)
+S3method(tidy,dml)
 S3method(vcov,dml)
 export(dml)
 export(psi_plpr)
