--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(glance,dml)
 S3method(print,dml)
 S3method(print,summary.dml)
 S3method(summary,dml)
+S3method(tidy,dml)
 S3method(vcov,dml)
 export(dml)
 export(psi_plpr)
@@ -32,8 +33,8 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,select)
+importFrom(furrr,furrr_options)
 importFrom(furrr,future_map)
-importFrom(furrr,future_options)
 importFrom(future,multiprocess)
 importFrom(future,plan)
 importFrom(glmnet,cv.glmnet)
